tests/NormalTests/paczka1/fuzzy1/62388267.err
Error in line 2: MWh4eGQOIxu S603 21,0
Error in line 5: IMU6GZBWc A239 69,6
Error in line 4: z6yfxKV S968 59,2
Error in line 6: GeyV8Qf S603 60,6
Error in line 19: GeyV8Qf S968 10,8
Error in line 21: MWh4eGQOIxu S968 96,1
Error in line 26: MWh4eGQOIxu A239 19,7
Error in line 23: z6yfxKV S968 23,8
Error in line 35: MWh4eGQOIxu S968 12,4
